💄 Fix ID button, were too much closer to ":"

--- a/src/pages/scss/contact.scss
+++ b/src/pages/scss/contact.scss
@@ -88,8 +88,8 @@
 
     &__copy {
       display: inline-block;
-      padding: 5px;
-      margin: 2px 0px;
+      padding: 3px;
+      margin: 2px;
       border-radius: 5px;
       cursor: pointer;
       min-width: 150px;
